# loqa-apps

./: .gitignore  README.md  package.json
.github/workflows/: build-android.yml  build-ios.yml  build.yml
e2e/: .gitignore  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: app.e2e.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/data/: games.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  rpc_server.rs  settings.rs  tray.rs
