[package]
name = "loqa-desktop"
version = "0.1.1"
edition = "2021"
description = "Loqa Desktop & Mobile Client"
authors = ["Loqa"]
license = "AGPL-3.0-or-later"

[lib]
name = "loqa_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Core ──
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "6"

# ── Cross-platform plugins (work on desktop + mobile) ──
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# ── Desktop-only plugins ──
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
chrono = "0.4"
sysinfo = "0.35"

# ── Windows-only ──
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_Power"] }
